# online_stereo_calibration_ros

./: .gitmodules  CMakeLists.txt  README.md  online_stereo_calibration_nodelets.xml  package.xml
include/: PerfectStereoCalibrationRos.h  StereoCalibrationRos.h
include/nodelets/: PerfectStereoCalibrationRosNodelet.h  StereoCalibrationRosNodelet.h
launch/: stereo_calibration.launch
src/: PerfectStereoCalibrationRos.cpp  StereoCalibrationRos.cpp
src/nodelets/: PerfectStereoCalibrationRosNodelet.cpp  StereoCalibrationRosNodelet.cpp
